--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -23,6 +23,16 @@
         <url-pattern>/blogList</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>servletFilter</filter-name>
+        <filter-class>filter.AuthorizationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>servletFilter</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
+  
+
     <!-- Cấu hình session -->
     <session-config>
         <session-timeout>30</session-timeout>
