--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\NetBeans\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\NetBeans\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.activation-1.2.0.jar=D:\\NetBeans\\javax.activation-1.2.0.jar
 file.reference.javax.mail.jar=D:\\NetBeans\\javax.mail.jar
 file.reference.json-20240303.jar=D:\\NetBeans\\json-20240303.jar
@@ -47,7 +49,9 @@ javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.javax.activation-1.2.0.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.json-20240303.jar}
+    ${file.reference.json-20240303.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
