--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -56,6 +56,8 @@ file.reference.lombok-1.18.24.jar=build/web/lib/lombok-1.18.24.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-java-8.0.30.jar
 file.reference.sqljdbc42.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\sqljdbc42.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\NetBeans\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\NetBeans\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javax.activation-1.2.0.jar=D:\\NetBeans\\javax.activation-1.2.0.jar
 file.reference.javax.mail.jar=D:\\NetBeans\\javax.mail.jar
 file.reference.json-20240303.jar=D:\\NetBeans\\json-20240303.jar
@@ -101,7 +103,9 @@ javac.classpath=\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
     ${file.reference.javax.activation-1.2.0.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.json-20240303.jar}
+    ${file.reference.json-20240303.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
