--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,8 +52,7 @@ file.reference.mysql-connector-java-8.0.30.jar=web\\lib\\mysql-connector-java-8.
 file.reference.sqljdbc42.jar=web\\lib\\sqljdbc42.jar
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=C:\\Users\\mocun\\Documents\\prj301\\ProjectPRJ\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=C:\\Users\\mocun\\Documents\\prj301\\ProjectPRJ\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.1.jar=build/web/lib/jaxb-api-2.1.jar
-file.reference.lombok-1.18.24.jar=build/web/lib/lombok-1.18.24.jar
+file.reference.lombok-1.18.24.jar=web/lib/lombok-1.18.24.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-java-8.0.30.jar
 file.reference.sqljdbc42.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\sqljdbc42.jar
@@ -79,9 +78,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
-    ${file.reference.jaxb-api-2.1.jar}:\
-    ${file.reference.lombok-1.18.24.jar}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
+ 
     ${file.reference.sqljdbc42.jar}:\
     ${libs.jstl.classpath}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
@@ -91,6 +89,8 @@ javac.classpath=\
     ${file.reference.json-20240303.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
+    ${file.reference.lombok-1.18.24.jar}:\
+
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
