--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,8 +4,16 @@
         <servlet-name>Controller</servlet-name>
         <servlet-class>controller.Controller</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>CourseListController</servlet-name>
+        <servlet-class>controller.CourseListController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/Controller</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>CourseListController</servlet-name>
+        <url-pattern>/CourseList</url-pattern>
     </servlet-mapping>
 </web-app>
