--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -103,6 +103,10 @@
     </servlet-mapping>
 
     <!-- Map Controller Servlet -->
+    <servlet>
+        <servlet-name>CourseListController</servlet-name>
+        <servlet-class>controller.CourseListController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/Controller</url-pattern>
