--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -75,6 +75,7 @@ javac.classpath=\
 
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.gson-2.11.0.jar}
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
