--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,6 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
-file.reference.gson-2.11.0.jar=web/lib/gson-2.11.0.jar
 file.reference.mysql-connector-j-8.4.0.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-j-8.4.0.jar
 file.reference.mysql-connector-java-8.0.30.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\mysql-connector-java-8.0.30.jar
 file.reference.sqljdbc42.jar=C:\\Users\\84941\\Documents\\Zalo Received Files\\sqljdbc42.jar
@@ -42,8 +41,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-8.4.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.30.jar}:\
-    ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.gson-2.11.0.jar}
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
