--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -171,6 +171,14 @@
         <servlet-name>CourseListController</servlet-name>
         <servlet-class>controller.CourseListController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UserProfileController</servlet-name>
+        <servlet-class>controller.UserProfileController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateUserProfileController</servlet-name>
+        <servlet-class>controller.UpdateUserProfileController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/Controller</url-pattern>
