--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,14 @@
-deploy.ant.properties.file=C:\\Users\\84941\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1
-j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
+deploy.ant.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+file.reference.activation.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\SWP391_OnlineLearning\\web\\lib\\activation.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\SWP391_OnlineLearning\\web\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\SWP391_OnlineLearning\\web\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.javax.mail.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\SWP391_OnlineLearning\\web\\lib\\javax.mail.jar
+file.reference.mysql-connector-j-8.4.0.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\SWP391_OnlineLearning\\web\\lib\\mysql-connector-j-8.4.0.jar
+file.reference.mysql-connector-java-8.0.30.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\SWP391_OnlineLearning\\web\\lib\\mysql-connector-java-8.0.30.jar
+file.reference.sqljdbc42.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\SWP391_OnlineLearning\\web\\lib\\sqljdbc42.jar
+j2ee.server.home=D:/Data System/Apache Software Foundation/Tomcat 10.1
+j2ee.server.instance=tomcat101:home=D:\\Data System\\Apache Software Foundation\\Tomcat 10.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\84941\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\build.properties
